# min-vst-host

./: .clangd  .ecrc  .editorconfig  .gitignore  .gitmodules  .mega-linter.yml  .pre-commit-config.yaml  CMakeLists.txt  CPPLINT.cfg  README.md  cppcheck-suppressions.txt  flake.nix  min-vst-host.nix  vst3sdk-source.json
.github/workflows/: buid.yml  mega-linter.yml
scripts/: download_vst3sdk.sh
source/: editorhost.cpp  editorhost.h  plugin.cpp  plugin.h  pluginloader.cpp  pluginloader.h  usediids.cpp
source/media/: audioclient.cpp  audioclient.h  imediaserver.h  iparameterclient.h  miditovst.h
source/media/jack/: jackclient.cpp
source/platform/: appinit.h  iapplication.h  iplatform.h  iwindow.h
source/platform/linux/: irunloopimpl.h  platform.cpp  runloop.cpp  runloop.h  window.cpp  window.h
